force-app/main/default/objects/Daily_Report_Item__c/Daily_Report_Item__c.object-meta.xml
<CustomObject>
    <label>Daily Job Item</label>
    <nameField>
        <displayFormat>DJI-{000000}</displayFormat>
        <label>Daily Report Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Job Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>