force-app/main/default/objects/Daily_Report_Item__c/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <formula>Daily_Report__r.Contract__r.Admin_Fee__c</formula>
    <label>Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>