force-app/main/default/objects/Daily_Report_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BD BHA</fullName>
            </value>
            <value>
                <fullName>Bleed / Kill Well</fullName>
            </value>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Circulate / Flush Hole</fullName>
            </value>
            <value>
                <fullName>Client Directed Work</fullName>
            </value>
            <value>
                <fullName>Drill Bridge Plug</fullName>
            </value>
            <value>
                <fullName>Finger Print Well</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Flow check well</fullName>
            </value>
            <value>
                <fullName>Install Surface Equipment</fullName>
            </value>
            <value>
                <fullName>Land Tubing Hanger</fullName>
            </value>
            <value>
                <fullName>Laydown / Breakout BHA</fullName>
            </value>
            <value>
                <fullName>Layout Tubing Hanger</fullName>
            </value>
            <value>
                <fullName>Make Up/Pick Up BHA</fullName>
            </value>
            <value>
                <fullName>Meeting / Drills</fullName>
            </value>
            <value>
                <fullName>Meeting (Safety, Training)</fullName>
            </value>
            <value>
                <fullName>MU BHA</fullName>
            </value>
            <value>
                <fullName>ND BOP</fullName>
                <label>ND BOP (PT, function test, draw down test)</label>
            </value>
            <value>
                <fullName>No Activity</fullName>
            </value>
            <value>
                <fullName>NU BOP</fullName>
            </value>
            <value>
                <fullName>Planned Maintenance</fullName>
            </value>
            <value>
                <fullName>POOH Completion String</fullName>
            </value>
            <value>
                <fullName>POOH Rod String</fullName>
            </value>
            <value>
                <fullName>POOH Workstring</fullName>
            </value>
            <value>
                <fullName>Prep, Strap, Tally String</fullName>
            </value>
            <value>
                <fullName>Pressure test (not including BOP)</fullName>
            </value>
            <value>
                <fullName>Pressure test BOP</fullName>
            </value>
            <value>
                <fullName>Pressure test client equipment</fullName>
            </value>
            <value>
                <fullName>Pressure test WD Well Servicing Equipment</fullName>
            </value>
            <value>
                <fullName>Pre start / Toolbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>