force-app/main/default/objects/Daily_Report_Item__c/fields/CJIAddToNDT__c.field-meta.xml
<CustomField>
    <fullName>CJIAddToNDT__c</fullName>
    <formula>Contract_Job_Item__r.Add_to_NDT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CJIAddToNDT</label>
    <type>Checkbox</type>
</CustomField>