force-app/main/default/objects/Daily_Report_Item__c/fields/Client_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Contract_Reference__c</fullName>
    <formula>Contract_Job_Item__r.Client_Contract_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Client Contract Reference from Contract Item</inlineHelpText>
    <label>Client Contract Reference</label>
    <type>Text</type>
</CustomField>