force-app/main/default/objects/Daily_Report_Item__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <description>Configuration</description>
    <formula>TEXT(Driver_Assignment__r.Configuration_pklist__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Driver Assignment</inlineHelpText>
    <label>Configuration</label>
    <type>Text</type>
</CustomField>