force-app/main/default/objects/Daily_Report_Item__c/fields/Contract_Job_Item__c.field-meta.xml
<CustomField>
    <fullName>Contract_Job_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Job Item</label>
    <referenceTo>Contract_Item__c</referenceTo>
    <relationshipLabel>Daily Job Items</relationshipLabel>
    <relationshipName>Daily_Report_Items</relationshipName>
    <type>Lookup</type>
</CustomField>