force-app/main/default/objects/Daily_Report_Item__c/fields/Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Report__c</fullName>
    <label>Daily Report</label>
    <referenceTo>Daily_Report__c</referenceTo>
    <relationshipName>Daily_Report_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>