force-app/main/default/objects/Daily_Report_Item__c/fields/Daily_Site_Job_Summary__c.field-meta.xml
<CustomField>
    <fullName>Daily_Site_Job_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Site Job Summary</label>
    <referenceTo>Daily_Summary_Report__c</referenceTo>
    <relationshipLabel>Daily Job Items</relationshipLabel>
    <relationshipName>Daily_Job_Items</relationshipName>
    <type>Lookup</type>
</CustomField>