force-app/main/default/objects/Daily_Report_Item__c/fields/Driver_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver Assignment</label>
    <referenceTo>Driver_Assignment__c</referenceTo>
    <relationshipLabel>Daily Job Items</relationshipLabel>
    <relationshipName>Daily_Job_Items</relationshipName>
    <type>Lookup</type>
</CustomField>