force-app/main/default/objects/Daily_Report_Item__c/fields/Driver_Name2__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name2__c</fullName>
    <description>Driver Assignment, Drivers Name</description>
    <formula>Driver_Assignment__r.Driver__r.Name</formula>
    <label>Driver</label>
    <type>Text</type>
</CustomField>