force-app/main/default/objects/Daily_Report_Item__c/fields/DSJ_Site__c.field-meta.xml
<CustomField>
    <fullName>DSJ_Site__c</fullName>
    <formula>Daily_Report__r.Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSJ - Site</label>
    <type>Text</type>
</CustomField>