force-app/main/default/objects/Daily_Report_Item__c/fields/DSJS_Status__c.field-meta.xml
<CustomField>
    <fullName>DSJS_Status__c</fullName>
    <formula>TEXT(Daily_Site_Job_Summary__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSJS - Status</label>
    <type>Text</type>
</CustomField>