force-app/main/default/objects/Daily_Report_Item__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>