force-app/main/default/objects/Daily_Report_Item__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>TEXT( Contract_Job_Item__r.Group__c )</formula>
    <label>Group</label>
    <type>Text</type>
</CustomField>