force-app/main/default/objects/Daily_Report_Item__c/fields/Item_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Item_Frequency__c</fullName>
    <formula>TEXT( Contract_Job_Item__r.Item_Frequency__c )</formula>
    <label>Item Frequency</label>
    <type>Text</type>
</CustomField>