force-app/main/default/objects/Daily_Report_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <formula>Contract_Job_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Name</label>
    <type>Text</type>
</CustomField>