force-app/main/default/objects/Daily_Report_Item__c/fields/Item_Name_Editable__c.field-meta.xml
<CustomField>
    <fullName>Item_Name_Editable__c</fullName>
    <label>Item Name(Editable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>