force-app/main/default/objects/Daily_Report_Item__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Description from Transport Job</description>
    <formula>Driver_Assignment__r.Transport_Job__r.TJ_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>from field TJ_Description</inlineHelpText>
    <label>Job Description</label>
    <type>Text</type>
</CustomField>