force-app/main/default/objects/Daily_Report_Item__c/fields/Load_Details__c.field-meta.xml
<CustomField>
    <fullName>Load_Details__c</fullName>
    <description>Driver Assignment Load Details</description>
    <formula>Driver_Assignment__r.Load_Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Driver Assignment Load Details</inlineHelpText>
    <label>Load Details</label>
    <type>Text</type>
</CustomField>