force-app/main/default/objects/Daily_Report_Item__c/fields/Number_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours__c</fullName>
    <description>Used only for Items where the Service Type is of type Hourly</description>
    <formula>((End_Time__c - Start_Time__c) * 1440)/60</formula>
    <label>Number of Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>