force-app/main/default/objects/Daily_Report_Item__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nipple Up</fullName>
            </value>
            <value>
                <fullName>Nibble Down</fullName>
            </value>
            <value>
                <fullName>Tripping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>