force-app/main/default/objects/Daily_Report_Item__c/fields/Quantity_Hour__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Hour__c</fullName>
    <formula>CASE(
    RecordType.DeveloperName,
    &apos;Per_Hour&apos;, Number_of_Hours__c,
    &apos;Per_Quantity&apos;, Quantity__c,
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>