force-app/main/default/objects/Daily_Report_Item__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>