force-app/main/default/objects/Daily_Report_Item__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>IF(
NOT(ISBLANK(Daily_Report__r.Contract__r.Admin_Fee__c)) &amp;&amp; ( TEXT(Contract_Job_Item__r.Service_Type__c) = &apos;Flexi Price/Quantity&apos;)
,
(Rate__c *  Quantity_Hour__c ) + (Daily_Report__r.Contract__r.Admin_Fee__c * (Rate__c * Quantity_Hour__c))
,
(Rate__c *  Quantity_Hour__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>