force-app/main/default/objects/Daily_Report_Item__c/fields/Total_Cost_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Quantity__c</fullName>
    <formula>IF( 
 RecordType.DeveloperName = &apos;Per_Quantity&apos; &amp;&amp; NOT(ISBLANK(Daily_Report__r.Contract__r.Admin_Fee__c)) &amp;&amp; (TEXT(Contract_Job_Item__r.Service_Type__c) = &apos;Flexi Price/Quantity&apos;), 
(Rate__c * Quantity__c) + (Daily_Report__r.Contract__r.Admin_Fee__c * (Rate__c * Quantity__c)), 
(Rate__c * Quantity__c) 
)</formula>
    <label>Total Cost(Quantity)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>