force-app/main/default/objects/Daily_Report_Item__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <description>Truck from Driver Assignment</description>
    <formula>Driver_Assignment__r.Truck__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Truck from Driver Assignment</inlineHelpText>
    <label>Truck</label>
    <type>Text</type>
</CustomField>