force-app/main/default/objects/Daily_Report_Item__c/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <formula>Daily_Report__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Name</label>
    <type>Text</type>
</CustomField>