force-app/main/default/objects/Daily_Report_Item__c/fields/UnitID__c.field-meta.xml
<CustomField>
    <fullName>UnitID__c</fullName>
    <formula>CASESAFEID(Daily_Report__r.Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UnitID</label>
    <type>Text</type>
</CustomField>