force-app/main/default/objects/Daily_Report_Item__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <formula>TEXT( Contract_Job_Item__r.UOM__c )</formula>
    <label>UOM</label>
    <type>Text</type>
</CustomField>