force-app/main/default/objects/Daily_Report_Item__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>Daily_Report_Items</relationshipName>
    <type>Lookup</type>
</CustomField>