force-app/main/default/objects/Daily_Report_Item__c/recordTypes/Per_Hour.recordType-meta.xml
<RecordType>
    <fullName>Per_Hour</fullName>
    <active>true</active>
    <description>For items where service type is fixed price per hour</description>
    <label>Per Hour</label>
</RecordType>