force-app/main/default/objects/Daily_Report_Item__c/recordTypes/Per_Quantity.recordType-meta.xml
<RecordType>
    <fullName>Per_Quantity</fullName>
    <active>true</active>
    <description>For items where service type is fixed price per quantity</description>
    <label>Per Quantity</label>
</RecordType>