force-app/main/default/objects/Daily_Report_Item__c/validationRules/Add_Correct_Contract_Job_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Correct_Contract_Job_Item</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(NOT(ISBLANK(Contract_Job_Item__c)),NOT(Daily_Report__r.Contract__c =  Contract_Job_Item__r.Contract__c)),
true,
false
)</errorConditionFormula>
    <errorMessage>Add Contract Job Item that is associated with the Contract of the Daily Site Job.</errorMessage>
</ValidationRule>