force-app/main/default/objects/Daily_Report_Item__c/validationRules/Cant_add_new_DJItem_for_expired_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_add_new_DJItem_for_expired_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
ISNEW() &amp;&amp; NOT(Daily_Report__r.Contract__r.Contract_Active__c),
TRUE,
FALSE
)</errorConditionFormula>
    <errorMessage>You cannot add new Daily Job Item for an expired Contract</errorMessage>
</ValidationRule>