force-app/main/default/objects/Daily_Report_Item__c/validationRules/Cant_Edit_Status_Submitted_Invoiced.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Edit_Status_Submitted_Invoiced</fullName>
    <active>false</active>
    <errorConditionFormula>IF( 
OR(TEXT(  Daily_Report__r.Status__c  ) = &apos;Submitted&apos;,TEXT( Daily_Report__r.Status__c) = &apos;Invoiced&apos;) , 
TRUE, 
FALSE 
)</errorConditionFormula>
    <errorMessage>Cannot Create Or Edit a Daily Job Item for a Status Submitted Or Invoiced</errorMessage>
</ValidationRule>