force-app/main/default/objects/Daily_Report_Item__c/validationRules/DailyReportItem_End_Time_Must_Be_Greater.validationRule-meta.xml
<ValidationRule>
    <fullName>DailyReportItem_End_Time_Must_Be_Greater</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(NOT(ISBLANK( Start_Time__c )),NOT(ISBLANK( End_Time__c )),Start_Time__c &gt; End_Time__c),
TRUE,
FALSE
)</errorConditionFormula>
    <errorMessage>End Time must be greater than the Start Time</errorMessage>
</ValidationRule>