force-app/main/default/objects/Daily_Report_Item__c/listViews/By_Contract_Job_Item.listView-meta.xml
<ListView>
    <fullName>By_Contract_Job_Item</fullName>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>Contract_Job_Item__c</columns>
    <columns>Daily_Site_Job_Summary__c</columns>
    <columns>Description__c</columns>
    <columns>Quantity_Hour__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Job_Item__c</field>
        <operation>equals</operation>
        <value>Q.A 389: Frac Tank (Tango)</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Rig 24</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Daily_Report_Item__c.Per_Quantity</value>
    </filters>
    <label>By Contract Job Item</label>
</ListView>