force-app/main/default/objects/Daily_Report_Item__c/listViews/Frac_Items_Cleanup.listView-meta.xml
<ListView>
    <fullName>Frac_Items_Cleanup</fullName>
    <columns>DSJ_Site__c</columns>
    <columns>Contract_Job_Item__c</columns>
    <columns>Daily_Site_Job_Summary__c</columns>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>Description__c</columns>
    <columns>Quantity_Hour__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>DSJS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Job_Item__c</field>
        <operation>contains</operation>
        <value>standby -</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Daily_Report_Item__c.Per_Quantity</value>
    </filters>
    <filters>
        <field>DSJS_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Frac Items - Cleanup</label>
</ListView>