force-app/main/default/objects/Daily_Report_Item__c/listViews/Hire_Pump_Package_1176.listView-meta.xml
<ListView>
    <fullName>Hire_Pump_Package_1176</fullName>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>Contract_Job_Item__c</columns>
    <columns>Daily_Site_Job_Summary__c</columns>
    <columns>Description__c</columns>
    <columns>Quantity_Hour__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Job_Item__c</field>
        <operation>equals</operation>
        <value>Hire: Pump Package #1176</value>
    </filters>
    <label>Hire: Pump Package #1176</label>
    <sharedTo>
        <group>Finance</group>
        <group>Transport</group>
    </sharedTo>
</ListView>