force-app/main/default/objects/Daily_Report_Item__c/listViews/Pump_Transport_Setup.listView-meta.xml
<ListView>
    <fullName>Pump_Transport_Setup</fullName>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>Contract_Job_Item__c</columns>
    <columns>Daily_Site_Job_Summary__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Job_Item__c</field>
        <operation>equals</operation>
        <value>Pump - Transport &amp; Setup</value>
    </filters>
    <label>Pump - Transport &amp; Setup</label>
    <sharedTo>
        <group>Transport</group>
    </sharedTo>
</ListView>