force-app/main/default/objects/Daily_Report_Item__c/listViews/Q_A_516_Dolly_Hire.listView-meta.xml
<ListView>
    <fullName>Q_A_516_Dolly_Hire</fullName>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>Contract_Job_Item__c</columns>
    <columns>Daily_Site_Job_Summary__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Job_Item__c</field>
        <operation>equals</operation>
        <value>Q.A 516: Dolly Hire</value>
    </filters>
    <label>Q.A 516: Dolly Hire</label>
    <sharedTo>
        <group>Finance</group>
        <group>Transport</group>
    </sharedTo>
</ListView>