force-app/main/default/objects/Daily_Report_Item__c/listViews/Q_A_572_11_Test_Stump_daily_hire.listView-meta.xml
<ListView>
    <fullName>Q_A_572_11_Test_Stump_daily_hire</fullName>
    <columns>Contract_Job_Item__c</columns>
    <columns>Daily_Report__c</columns>
    <columns>Daily_Site_Job_Summary__c</columns>
    <columns>ReportDate__c</columns>
    <columns>Quantity_Hour__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Job_Item__c</field>
        <operation>equals</operation>
        <value>Q.A 572: 11&quot; Test Stump daily hire</value>
    </filters>
    <label>Q.A 572: 11&quot; Test Stump daily hire</label>
</ListView>