force-app/main/default/objects/Daily_Report_Item__c/listViews/Recharge_Gas_Bottles_Rig_28_Rig_32.listView-meta.xml
<ListView>
    <fullName>Recharge_Gas_Bottles_Rig_28_Rig_32</fullName>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>Contract_Job_Item__c</columns>
    <columns>Daily_Site_Job_Summary__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Job_Item__c</field>
        <operation>equals</operation>
        <value>Recharge: Gas Bottles</value>
    </filters>
    <label>Recharge: Gas Bottles (Rig 28 &amp; Rig 32)</label>
    <sharedTo>
        <group>BOO</group>
        <group>Finance</group>
        <group>Rig_28</group>
        <group>Rig_32</group>
    </sharedTo>
</ListView>