force-app/main/default/objects/Daily_Report_Item__c/listViews/Rig_28_MPK_Flare_360.listView-meta.xml
<ListView>
    <fullName>Rig_28_MPK_Flare_360</fullName>
    <columns>Contract_Job_Item__c</columns>
    <columns>Daily_Site_Job_Summary__c</columns>
    <columns>ReportDate__c</columns>
    <columns>Unit_Name__c</columns>
    <columns>Quantity_Hour__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Job_Item__c</field>
        <operation>contains</operation>
        <value>Q.A 890: Fuel Pod</value>
    </filters>
    <filters>
        <field>ReportDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>3/6/2025</value>
    </filters>
    <label>Q.A 890: Fuel Pod</label>
</ListView>