force-app/main/default/objects/Daily_Report_Item__c/listViews/Stayover_Accom.listView-meta.xml
<ListView>
    <fullName>Stayover_Accom</fullName>
    <columns>NAME</columns>
    <columns>ReportDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Description__c</columns>
    <columns>Quantity__c</columns>
    <columns>Daily_Site_Job_Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Job_Item__c</field>
        <operation>equals</operation>
        <value>Dalby Stayover Camp (Superior)</value>
    </filters>
    <label>Stayover Accom</label>
</ListView>